Refactor Kafka setup: change JDK version from 11 to 8 and update topic creation and subscription methods to use Collections.singletonList